--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description              : "Blog de ciberseguridad"
 url                      : "https://akaj4ndr0.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "akaj4ndr0/akaj4ndr0.github.io"   #"slemire/slemire.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-#logo                     : #"/assets/images/masthead.png"
+#logo                     : "/assets/images/avatar.png"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
