--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 remote_theme             : "mmistakes/minimal-mistakes@4.15.1"
-minimal_mistakes_skin    : "haxor" #"dark", "aqua", "air", "contrast", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "haxor" #"contrast", "aqua", "dark", "sunrise", "neon", "mint", "air", "plum"
 
 # Site Settings
 locale                   : "es-SPA"
