--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 remote_theme             : "mmistakes/minimal-mistakes@4.15.1"
-minimal_mistakes_skin    : "haxor" #"contrast", "aqua", "dark", "sunrise", "neon", "mint", "air", "plum"
+minimal_mistakes_skin    : "dark" #"haxor", "aqua", "air", "sunrise", "neon", "mint", "plum", "contrast"
 
 # Site Settings
 locale                   : "es-SPA"
@@ -105,7 +105,7 @@ author:
   avatar           : "/assets/images/avatar.png"
   bio              : "Pentester, Ethical Hacker at Atos IT / CPHE / OSINT / HACKING WIFI / CREADOR DE CONTENIDO"
   location         : "Spain"
-  email            : #"akaj4ndr0@gmail.com"
+  email            : #"aka.j4ndr0@gmail.com"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
