--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Javier Gonzalez"
   avatar           : "/assets/images/avatar.png"
-  bio              : "Pentester, Ethical Hacker at Atos IT / CPHE / OSINT / HACKING WIFI / CREADOR DE CONTENIDO"
+  bio              : "Pentester, Ethical Hacker at Eviden CEH / CPHE / OSINT / HACKING WIFI / CREADOR DE CONTENIDO"
   location         : "Spain"
   email            : #"aka.j4ndr0@gmail.com"
   uri              :
