--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description              : "Blog de ciberseguridad"
 url                      : "https://akaj4ndr0.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "akaj4ndr0/akaj4ndr0.github.io"   #"slemire/slemire.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-#logo                     : "/assets/images/avatar.png"
+#logo                     : "/assets/images/logo.png"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "Javier Gonzalez"
-  avatar           : "/assets/images/avatar.png"
+  avatar           : "/assets/images/logo.png"
   bio              : "Pentester, Ethical Hacker at Eviden CEH / CPHE / OSINT / HACKING WIFI / CREADOR DE CONTENIDO"
   location         : "Spain"
   email            : #"aka.j4ndr0@gmail.com"
