--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "es-SPA"
 title                    : "CiberBlog"
 title_separator          : "-"
 name                     : "Javier González"
-description              : "Blog de ciberseguridad"
+description              : "Blog de ciberseguridad. Hacking ético. Scripting en Python. Herramientas de hacking"
 url                      : "https://akaj4ndr0.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "akaj4ndr0/akaj4ndr0.github.io"   #"slemire/slemire.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
