--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 remote_theme             : "mmistakes/minimal-mistakes@4.15.1"
-minimal_mistakes_skin    : "dark" #"contrast", "aqua", "haxor", "air", "sunrise", "neon", "plum", "mint"
+minimal_mistakes_skin    : "haxor" #"dark" #"contrast", "aqua", "haxor", "air", "sunrise", "neon", "plum", "mint"
 
 # Site Settings
 locale                   : "es-SPA"
