--- a/_config.yml
+++ b/_config.yml
@@ -197,7 +197,7 @@ sass:
 
 # Outputting
 permalink: /:title/
-paginate: 10 # amount of posts to show
+paginate: 7 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
@@ -210,6 +210,7 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-seo-tag
 
 # mimic GitHub Pages with --safe
 whitelist:
